force-app/main/default/objects/Insolvency_Detail__c/Insolvency_Detail__c.object-meta.xml
<CustomObject>
    <description>Insolvency Details</description>
    <label>Insolvency Detail</label>
    <nameField>
        <displayFormat>ID-{00000}</displayFormat>
        <label>Insolvency Detail</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insolvency Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>