force-app/main/default/objects/Insolvency_Detail__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <description>Bank Name</description>
    <inlineHelpText>Bank Name</inlineHelpText>
    <label>Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scotia Bank</fullName>
            </value>
            <value>
                <fullName>SPL</fullName>
            </value>
            <value>
                <fullName>SDA</fullName>
            </value>
            <value>
                <fullName>Canaccede</fullName>
            </value>
            <value>
                <fullName>Fidem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>