force-app/main/default/objects/Insolvency_Detail__c/fields/Insolvency__c.field-meta.xml
<CustomField>
    <fullName>Insolvency__c</fullName>
    <description>Insolvency</description>
    <inlineHelpText>Insolvency</inlineHelpText>
    <label>Insolvency</label>
    <referenceTo>Insolvency__c</referenceTo>
    <relationshipLabel>Insolvency Details</relationshipLabel>
    <relationshipName>Insolvency_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>