force-app/main/default/objects/Insolvency_Detail__c/fields/Number_of_Accounts_Needing_Validation__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Accounts_Needing_Validation__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Accounts Needing Validation</description>
    <inlineHelpText>Accounts Needing Validation</inlineHelpText>
    <label>Accounts Needing Validation</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>