force-app/main/default/objects/Insolvency_Detail__c/fields/Number_of_Unsecured_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Unsecured_Accounts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of Unsecured Accounts</description>
    <inlineHelpText>Number of Unsecured Accounts</inlineHelpText>
    <label>Number of Unsecured Accounts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>