force-app/main/default/objects/Insolvency_Detail__c/fields/Secured_Claim_Amount__c.field-meta.xml
<CustomField>
    <fullName>Secured_Claim_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Secured Claim Amount</description>
    <inlineHelpText>Secured Claim Amount</inlineHelpText>
    <label>Secured Claim Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>