force-app/main/default/objects/Insolvency_Detail__c/fields/Unsecured_Claim_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unsecured_Claim_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Unsecured Claim Amount</description>
    <inlineHelpText>Unsecured Claim Amount</inlineHelpText>
    <label>Unsecured Claim Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>